--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -1,9 +1,31 @@
-<!-- main app container -->
-<div class="jumbotron">
-  <div class="container">
-      <div class="col-sm-8 col-sm-offset-2">
+<nav class="blue darken-1">
+    <div class="nav-wrapper">
+        <div class="container">
+            <div class="row">
+                <a href="index.html" class="brand-logo">Sileau</a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li>
+                        <div style="width:300px;" class="white">
+                            <div class="col s12 " >
+                                <div class="row">
+                                    <div class="input-field col s6 s12 white-text">
+                                        <i class="white-text material-icons prefix">search</i>
+                                        <input type="text" placeholder="Recherche" class=" white-text" >
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li><a href="friendsRequest.html"><i class="large material-icons">person</i></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</nav>
+<div class="container">
+    <div class="row">
+        <div class="col s12 m12 offset-l2 l8">
           <router-outlet></router-outlet>
-      </div>
-  </div>
+        </div>
+    </div>
 </div>
-
