Added a navbar that looks different depending if the user is logged in or not

--- a/angular-client/src/app/welcome/components/welcome/welcome.component.html
+++ b/angular-client/src/app/welcome/components/welcome/welcome.component.html
@@ -1,6 +1,8 @@
-<div class="col-md-6 col-md-offset-1">
-  <app-login></app-login>    
-</div>
-<div class="col-md-4 col-md-offset-1">
-    <a href='/signup'>Sign up here!!!</a>   
+<div class="row">
+  <div class="col md6">
+    <app-login></app-login>    
+  </div>
+  <div class="col md4">
+      <a href='/signup'>Sign up here!!!</a>   
+  </div>
 </div>
