--- a/angular-client/src/app/home/components/home/home.component.html
+++ b/angular-client/src/app/home/components/home/home.component.html
@@ -7,5 +7,8 @@
           <li *ngFor="let article of articles">{{article.title}} {{article.text}}</li>
       </ul>
   </div>
+  <div>
+      <app-master></app-master>
+  </div>
   <p><a [routerLink]="['/logout']">Logout</a></p>
 </div>
