--- a/angular-client/src/app/master/components/master/master.component.html
+++ b/angular-client/src/app/master/components/master/master.component.html
@@ -1,4 +1,14 @@
 <h2>Masters</h2>
-<ul>
-  <li *ngFor="let master of masters"><button (click)="toggleFlag(master)">{{master.imei}}</button></li>
-</ul>
+<div>
+ Fan: {{fanActivated}}
+ <button (click)="toggleFlag()">Toggle</button>
+</div>
+<div>
+  Température: {{temperature}}
+</div>
+<div>
+  Humidité: {{humidity}}
+</div>
+<div>
+  Pression: {{pressure}}
+</div>
