--- a/angular-client/src/app/shared/components/navbar/navbar.component.html
+++ b/angular-client/src/app/shared/components/navbar/navbar.component.html
@@ -1,31 +1,12 @@
 <nav *ngIf="nav.visible; else elseBlock" class="nav-extended blue darken-1">
     <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Logo</a>
-        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
-        </ul>
-        <ul class="side-nav" id="mobile-demo">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
-        </ul>
-    </div>
-    <div class="nav-content">
-        <ul class="tabs tabs-transparent">
-        <li class="tab"><a href="#test1">Test 1</a></li>
-        <li class="tab"><a class="active" href="#test2">Test 2</a></li>
-        <li class="tab disabled"><a href="#test3">Disabled Tab</a></li>
-        <li class="tab"><a href="#test4">Test 4</a></li>
-        </ul>
+        <a href="#" class="brand-logo center">Silo</a>
     </div>
 </nav>
 <ng-template #elseBlock>
     <nav class="blue darken-1">
         <div class="nav-wrapper">
-            <a href="#" class="brand-logo">Logo</a>
+            <a href="#" class="brand-logo center">Bienvenue !</a>
         </div>
     </nav>
 </ng-template>
