--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -1,8 +1,6 @@
 <app-navbar></app-navbar>
 <div class="container">
-    <div class="row">
-        <div class="col s12 m12 offset-l2 l8">
-          <router-outlet></router-outlet>
-        </div>
+    <div class="col s12 m12">
+        <router-outlet></router-outlet>
     </div>
 </div>
