--- a/angular-client/src/app/home/components/home/home.component.html
+++ b/angular-client/src/app/home/components/home/home.component.html
@@ -1,4 +1,2 @@
-<div class="col-md-6 col-md-offset-3">
-    <app-master></app-master>
-    <p><a [routerLink]="['/logout']">Logout</a></p>
-</div>
+<app-master></app-master>
+<!-- <p><a [routerLink]="['/logout']">Logout</a></p> -->
