--- a/angular-client/src/app/welcome/components/welcome/welcome.component.html
+++ b/angular-client/src/app/welcome/components/welcome/welcome.component.html
@@ -1,8 +1,10 @@
 <div class="row">
-  <div class="col md6">
+  <div class="col m4 s12 offset-m4">
     <app-login></app-login>    
   </div>
-  <div class="col md4">
-      <a href='/signup'>Sign up here!!!</a>   
+</div>
+<div class="row">
+  <div class="col m4 s11 offset-m4">
+      <h5 class="center-align"><a href='/signup'>Créer un compte</a></h5> 
   </div>
 </div>
