adding the button back to where it was previously :p

--- a/angular-client/src/app/welcome/components/welcome/welcome.component.html
+++ b/angular-client/src/app/welcome/components/welcome/welcome.component.html
@@ -1,10 +1,10 @@
 <div class="row">
-  <div class="col m4 s12 offset-m4">
+  <div class="col m6 s12 l6 offset-m3 offset-l3">
     <app-login></app-login>    
   </div>
 </div>
 <div class="row">
-  <div class="col m4 s11 offset-m4">
+  <div class="col m6 s12 l6 offset-m3 offset-l3">
       <h5 class="center-align"><a href='/signup'>Créer un compte</a></h5> 
   </div>
 </div>
