--- a/angular-client/src/app/master/components/master/master.component.html
+++ b/angular-client/src/app/master/components/master/master.component.html
@@ -1,5 +1,24 @@
 <div class="row" style="margin-top: 5%">
   <div class="col m4 s12">
+    <div class="card small" style="background-color: #eeeeee">
+      <div class="card-content" style="padding-top: 28%">
+        <div class="switch center">
+            <label>
+            Off
+            <input (click)="toggleFlag()" [checked]="fanActivated" type="checkbox">
+            <span class="lever"></span>
+            On
+            </label>	
+          </div>
+        </div>
+      <div class="card-content card-bottom" style="background-color: #bdbdbd">
+          <h5 class="center grey-text text-lighten-3">Ventilation</h5>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col m4 s12">
       <div class="card small" style="background-color: #f9bcc9">
         <div class="card-content">
             <h1 class="center-align grey-text text-lighten-3" style="margin-top: 20%;">{{temperature}}</h1>
