--- a/angular-client/src/app/master/components/master/master.component.html
+++ b/angular-client/src/app/master/components/master/master.component.html
@@ -1,4 +1,4 @@
 <div class="row" style="margin-top: 5%" >
-  <app-sensor-module *ngFor="let module of modules" [module]="module" ></app-sensor-module>
+  <app-sensor-module *ngFor="let module of modules" [sModule]="module" ></app-sensor-module>
 </div>
 
